# Cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  requirements.txt
BuildTools/: fmt.cmake  googletest.cmake  hinnant-date.cmake  nlohmann-json.cmake  python.cmake  sqlite.cmake  yaml-cpp.cmake
BuildToolsTests/EntityGeneration/: CMakeLists.txt  SampleDefinition.yaml
Docs/: Makefile
Docs/source/: Done.rst  Links.rst  Misc.rst  ProjectIdeas.rst  Projects.rst  Setup.rst  Todo.rst  conf.py  index.rst
Docs/source/Projects/: Database.rst  EnumMapper.rst  MazeGenerator.rst  QtSfml.rst  QtSfmlDemo.rst
Libraries/sqlite-3.33.0/: CMakeLists.txt
PyTools/: generateEntity.py
PyTools/Generator/: EntityGenerator.py  EntityHeaderGenerator.py
PyTools/Generator/Templates/: EntityHeaderTemplate.txt  EntitySourceTemplate.txt
PyToolsTests/: CMakeLists.txt
PyToolsTests/Generator/: tests_entityGenerator.py
Res/: Resources.qrc
Src/Core/: CMakeLists.txt
Src/Core/Containers/: Contains.h  EnumMapper.hpp  LoopIterator.h  TwoWayStaticMap.hpp
Src/Core/Date/: DateSqlParam.cpp  DateSqlParam.h
Src/Core/Factory/: RegistrableFactory.h
Src/Core/Generator/Maze/: IMazeGenerator.h  Maze.h  RandomizedKruskals.cpp  RandomizedKruskals.h  RecursiveBacktrackingGenerator.cpp  RecursiveBacktrackingGenerator.h
Src/Core/Grids/: Grid.cpp  Grid.h
Src/Core/Mazes/: BaseGenerator.cpp  BaseGenerator.h  GeneratorFactory.cpp  GeneratorFactory.h  IMazeGenerator.h  Maze.h  RandomizedKruskals.cpp  RandomizedKruskals.h  RecursiveBacktrackingGenerator.cpp  RecursiveBacktrackingGenerator.h
Src/Core/Random/: RandomTextGenerator.cpp  RandomTextGenerator.h  VariableRangeRng.cpp  VariableRangeRng.h
Src/Core/SfmlTools/: Color.h  ScreenCapturer.cpp  ScreenCapturer.h  Sfml_fwd.h
Src/Core/StringTools/: CstrCompare.hpp
Src/Core/Time/: FpsCounter.cpp  FpsCounter.h
Src/Core/Types/: DemangledTypeName.h  IsOptional.h
Src/Database/: CMakeLists.txt  Database.cpp  Database.h  Dataset.cpp  Dataset.h  ParamSetter.cpp  ParamSetter.h  Query.cpp  Query.h  SQLite_fwd.h  ValueGetter.cpp  ValueGetter.h
Src/Journal/App/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  LoginButton.qml  LoginDialog.qml  main.cpp  main.qml  qml.qrc
Src/Journal/App/Controllers/: JournalPageController.cpp  JournalPageController.h  LoginDialogController.cpp  LoginDialogController.h
Src/Journal/App/Gui/Components/: Sidebar.qml  SidebarButton.qml
Src/Journal/App/Gui/Dialog/: DummyDialog.qml  MainWindow.qml
Src/Journal/App/Gui/Pages/: CurrentDay.qml  Journal.qml
Src/Journal/App/Models/: JournalEntriesModel.cpp  JournalEntriesModel.h
Src/Journal/ConsoleApp/: CMakeLists.txt  main.cpp
Src/Journal/Database/: CMakeLists.txt  Database.cpp  Database.h  InitGenerator.cpp  InitGenerator.h
Src/Journal/Database/Dao/: EntriesDao.cpp  EntriesDao.h
Src/Journal/Database/Tables/: Entry.yaml
Src/QmlSfml/: CMakeLists.txt  SfmlWindow.cpp  SfmlWindow.h  SfmlWindow.qml  main.cpp  main.qml  qml.qrc
Src/QtSfml/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameState.h  QtSfmlCanvas.cpp  QtSfmlCanvas.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
Src/QtSfmlDemo/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BaseDemo.cpp  BaseDemo.h  CMakeLists.txt  DemoContext.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Src/QtSfmlDemo/Algorithms/Gradient/: GradientControls.ui  GradientProgram.cpp  GradientProgram.h
Src/QtSfmlDemo/Algorithms/MazeGenerator/: IGeneratorWrapper.h  Maze.h  MazeControls.cpp  MazeControls.h  MazeControls.ui  MazeGenerator.cpp  MazeGenerator.h  MazeGeneratorFactory.cpp  MazeGeneratorFactory.h  MazePrinter.cpp  MazePrinter.h  MazeProgram.cpp  MazeProgram.h  RandomizedKruskals.cpp  RandomizedKruskals.h  RecursiveBacktracking.cpp  RecursiveBacktracking.h
Src/QtSfmlDemo/Common/: GridPrinter.cpp  GridPrinter.h
Src/QtSfmlDemo/Demos/GridPrinter/: GridPrinterDemo.cpp  GridPrinterDemo.h  GridPrinterDemoControls.ui
Src/QtSfmlDemo/Demos/Init/: InitProgram.cpp  InitProgram.h
Src/QtSfmlDemo/Demos/QtSfmlDemo/: QtSfmlDemo.cpp  QtSfmlDemo.h  QtSfmlDemo.ui
Src/QtSfmlDemo/Demos/TestApp/: GameControls.cpp  GameControls.h  GameControls.ui  GameEngine.cpp  GameEngine.h  GameState.h  TestDemo.cpp  TestDemo.h
Src/SqlGen/: CMakeLists.txt  Generator.cpp  Generator.h
Src/TestTools/: CreateTestDirectory.h
Tests/Core/: CMakeLists.txt  main.cpp
Tests/Core/Containers/: ContainsTests.cpp  EnumMapperTests.cpp  LoopIteratorTests.cpp  TwoWayStaticMapTests.cpp
Tests/Core/Date/: DateSqlParamTests.cpp
Tests/Core/Factory/: RegistrableFactoryTests.cpp
Tests/Core/Random/: VariableRangeRngTests.cpp
Tests/Core/StringTools/: CstrCompareTests.cpp
Tests/Core/Types/: DemangledTypeNameTests.cpp  IsOptionalTests.cpp
Tests/CppTests/: CMakeLists.txt  IsStringNumberTests.cpp  LifetimeTests.cpp  SharedPtrTests.cpp
Tests/Database/: CMakeLists.txt  DatabaseTests.cpp  DatasetTests.cpp  QueryTests.cpp  TypesTests.cpp  ValueGetterTests.cpp  main.cpp
Tests/Database/Tools/: TestTable.cpp  TestTable.h
Tests/SqlGen/: CMakeLists.txt  GeneratorTests.cpp  main.cpp
TestsBuildSystem/EntityGeneration/: CMakeLists.txt  SampleDefinition.yaml
TestsPyTools/: CMakeLists.txt
TestsPyTools/Generator/: tests_entityGenerator.py  tests_entityHeaderGenerator.py
